cluster/apps/networking/envoy-gateway/backend-traffic-policy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: global-limits
  namespace: networking
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: envoy-gateway
  tcpKeepalive:
    idleTime: 60s
    interval: 30s
    probes: 5
  healthCheck:
    active:
      type: HTTP
      http:
        path: /
        expectedStatuses:
          - start: 200
            end: 499
      interval: 10s
      unhealthyThreshold: 2
      healthyThreshold: 1
  retry:
    numRetries: 2
    retryOn:
      triggers:
        - reset
        - connect-failure
